<resources>
    <string name="app_name" translatable="false">Poets Kingdom</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_personalisation">PersonalisationActivity</string>
    <string name="saved_images_folder_name" translatable="false">savedImages</string>
    <string name="poems_folder_name" translatable="false">poems</string>
    <string name="poem_themes_folder_name" translatable="false">poemThemes</string>
    <string name="thumbnails_folder_name" translatable="false">thumbnails</string>
    <string name="background_image_drawable_folder" translatable="false">background</string>
    <string name="my_images_folder_name" translatable="false">myImages</string>
    <string name="poem_preferences">Poem Preferences</string>
    <string name="signature_title">Poem signature</string>
    <string name="poem_orientation">Poem Orientation</string>
    <string name="username_title">User Name</string>
    <string name="front_page_signature">Cover Page</string>
    <string name="poem_footer">Poem Footer</string>
    <string name="app_preferences">App Preferences</string>
    <string name="custom_theme">Customise Application</string>
    <string name="app_background">App Background</string>
    <string name="signature_pref" translatable="false">signature</string>
    <string name="orientation_pref" translatable="false">orientation</string>
    <string name="cover_page_pref" translatable="false">coverPage</string>
    <string name="author_pref" translatable="false">author</string>
    <string name="resolution_pref" translatable="false">resolution</string>
    <string name="app_nickname_pref" translatable="false">appNickname</string>
    <string name="create_poem">Create Poem</string>
    <string name="my_poem">My Poems</string>
    <string name="personalisation">Personalisation</string>
    <string name="poem_title">Title</string>
    <string name="poem_author">Author</string>
    <string name="start_writing">Start Writing Here</string>
    <string name="outline">Outline</string>
    <string name="background">Background</string>
    <string name="text">Text</string>
    <string name="rounded_rectangle_outline_description">ROUNDED_RECTANGLE</string>
    <string name="teardrop_description_outline">TEARDROP</string>
    <string name="rotated_teardrop_outline">ROTATED_TEARDROP</string>
    <string name="rectangle_outline_description">RECTANGLE</string>
    <string name="lemon_outline_description">LEMON</string>
    <string name="colors">Colors</string>
    <string name="color_palette">Color Palette</string>
    <string name="image">Image</string>
    <string name="left_text_align">Left align image</string>
    <string name="center_text_align">Center Text Image</string>
    <string name="right_align_text">Right Align Text</string>
    <string name="text_color">Text Color</string>
    <string name="text_color_image">Text Color Image</string>
    <string name="text_size_default">Text Size: 14sp</string>
    <string name="text_size_changeable">Text Size: %0$dsp</string>
    <string name="casual_font_family" translatable="false">Casual</string>
    <string name="cursive_font_family" translatable="false">Cursive</string>
    <string name="monospace_font_family" translatable="false">Monospace</string>
    <string name="sans_serif_font_family" translatable="false">Sans-Serif</string>
    <string name="adinekirnbirg_family" translatable="false">Adine Kirnbirg</string>
    <string name="bangers_family" translatable="false">Bangers</string>
    <string name="flaemische_family" translatable="false">Flaemische</string>
    <string name="opensansregular_family" translatable="false">Open Sans Regular</string>
    <string name="serif_font_family" translatable="false">Serif</string>
    <string name="sacramento_family" translatable="false">Sacramento</string>
    <string name="scriptin_family" translatable="false">Scriptin</string>
    <string name="sourcesansproregular_family" translatable="false">Source Sans Regular</string>
    <string name="thesignature_family" translatable="false">The Signature</string>
    <string name="menu_button">Menu</string>
    <string name="more_options">More Options</string>
    <string name="view_type">View Type</string>
    <string name="search">Search</string>
    <string name="my_images">My Images</string>
    <string name="builder_message">The selected file name is already stored in the local
        application folder</string>
    <string name="builder_understood">Understood</string>
    <string name="builder_title">File already exists</string>
    <string name="preview_text">This is line 1\nThis is line 2\nThis is line 3</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_request_message">This permission is used to copy image files that you
        select into a specific folder that contains images you would like to use to create poems.
        Without this permission you will not be able to set images as backgrounds for your poems</string>
    <string name="permission_agreement">Agree</string>
    <string name="permission_denial">Refuse</string>
    <string name="nickname_placeholder">Nickname Placeholder</string>
    <string name="ariana_violeta_font" translatable="false">Ariana Violeta</string>
    <string name="cabal_font" translatable="false">Cabal</string>
    <string name="cabal_bold_font" translatable="false">Cabal Bold</string>
    <string name="lobster_regular_font" translatable="false">Lobster Regular</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_new_image">Add New Image</string>
    <string name="color_picker_title">Select Color</string>
    <string name="remove_background_color_outline_popup">Would you like to remove the outline or the background color</string>
    <string name="remove_background_image_outline_popup">Would you like to remove the outline or the image</string>
    <string name="remove_background_title">Remove Background Element</string>
    <string name="positive_background_color_outline_button">Outline</string>
    <string name="negative_background_color_outline_button">Color</string>
    <string name="negative_background_image_outline_button">Image</string>
    <string name="create_poem_title">Give Your Poem A Title :)</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="invalid_input">Invalid input</string>
    <string name="invalid_input_message">You have entered a name which does not contain letters
    and or numbers. Please enter a valid name.</string>
    <string name="invalid_input_message_extended">Failed to created a new Album. Check that your input is valid
    and is not the same as an already saved album.</string>
    <string name="valid_input_message">
        Enter text that contains letters and or numbers
    </string>
    <string name="image_for_result_key">selectImageForResult</string>
    <string name="image_selection_title">Confirm App Background Image</string>
    <string name="image_selection_message">Do you confirm that this is the image you would like to
    use as the applications background</string>
    <string name="error_title">Error</string>
    <string name="error_image_backround_messsage">Unfortunately something went wrong trying to
        obtain the image you want to make your background. Please try again</string>
    <string name="nickname_preferences">Nickname</string>
    <string name="background_chosen">Default Background</string>
    <string name="switch_on_title">Theme Style</string>
    <string name="switch_on_message">Would you like to keep your previously selected theme or would
        you like to select a new one. Duly note that the application needs to
        restart to apply the theme</string>
    <string name="switch_on_positive_button">Previous Theme</string>
    <string name="switch_on_negative_button">New Theme</string>
    <string name="failed_poem_load_title">Failed To Load Poem</string>
    <string name="failed_poem_load_message">An error occurred whilst loading your poem theme please
        try again. If the problem persists file a bug report</string>
    <string name="personalisation_sharedpreferences_key">personalisation_settings</string>
    <string name="create_poem_text_view_hint">Start Writing here</string>
    <string name="pages">Pages</string>
    <string name="edit_theme">Edit</string>
    <string name="file_already_exists">File already exists</string>
    <string name="text_options_button">Text Options</string>
    <string name="text_size_button">Text Size</string>
    <string name="text_color_button">Text Color</string>
    <string name="save_button">Save Options</string>
    <string name="slider_description">Text Size Slider</string>
    <string name="save_pdf">Save as PDF</string>
    <string name="save_image">Save as an Image</string>
    <string name="save_file">Save as a File</string>
    <string name="category">Category</string>
    <string name="file_exists_message">There exists a file with the same title as the current poem.
        Would you like to overwrite this file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_toast">%1$s has successfully been saved as %2$s</string>
    <string name="error_toast">An error has occurred trying to create a %1$s</string>
    <string name="delete_button_description">Delete Page Button</string>
    <string name="on_exit_activity_toast">Attempting to save the current poem before exit</string>
    <string name="on_long_hold_image">Image indicating if selected view is checked or not</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="categories">Categories</string>
    <string name="search_file_name_here">Search File Name Here</string>
    <string name="delete_button">Delete Button</string>
    <string name="pdf_icon">PDF icon</string>
    <string name="image_icon">Image Icon</string>
    <string name="share_as_image">Share as image</string>
    <string name="share_as_image_toast">You can only share one poem at a time</string>
    <string name="external_storage_dialog_title">External Storage Permission</string>
    <string name="external_storage_dialog_message">In order to share images the application needs to
        copy local folder files into a folder where all other applications can access them. Do you grant this permission?</string>
    <string name="my_images_text">My Images</string>
    <string name="my_poems_text">My Poems</string>
    <string name="previous_image">Previous Image</string>
    <string name="next_image">Next Image</string>
    <string name="the_poets_kingdom_image">The Poets Kingdom Image</string>
    <string name="invalid_number_of_characters">Too many characters input</string>
    <string name="invalid_number_of_characters_message">The limit is 30 characters for a username please try again</string>
    <string name="monospace">monospace</string>
    <string name="sans_serif">sans-serif</string>
    <string name="serif">serif</string>
    <string name="enter_poem_text">Enter Poem Text</string>
    <string name="edit_poem_theme">Edit Poem Theme</string>
    <string name="center_horizontal_text">Center Verical Text</string>
    <string name="image_size_orientation">Image Orientation Size</string>
    <string name="poem_thumbnail_settings">Thumbnail Settings</string>
    <string name="poem_layout">Layout Settings</string>
    <string name="application_nickname">App Nickname</string>
</resources>