<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/poem_thumbnail_settings">

        <ListPreference
            app:key="coverPage"
            app:title="@string/front_page_signature"
            app:entries="@array/cover_page_entries"
            app:entryValues="@array/cover_page_values"
            app:defaultValue="true"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="author"
            app:title="@string/poem_author"
            app:defaultValue="Not Selected"
            android:dialogLayout="@layout/edit_text_dialog"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:defaultValue="Not Selected"
            android:dialogLayout="@layout/edit_text_dialog"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/poem_layout">

        <ListPreference
            app:key="orientation"
            app:title="@string/poem_orientation"
            app:entries="@array/orientation_entries"
            app:entryValues="@array/orientation_values"
            app:defaultValue="portrait"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:key="resolution"
            app:title="@string/image_size_orientation"
            app:entries="@array/landscape_orientation_entries"
            app:entryValues="@array/landscape_orientation_values"
            app:defaultValue="1080 1080"
            app:isPreferenceVisible="false"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/application_nickname">

        <EditTextPreference
            app:key="appNickname"
            app:title="@string/nickname_preferences"
            android:dialogLayout="@layout/edit_text_dialog"
            android:maxLength="30"
            app:entries="@array/cover_page_entries"
            app:entryValues="@array/cover_page_values"
            app:defaultValue="@string/nickname_placeholder"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>


</PreferenceScreen>